@@ -1,4 +1,4 @@
-# canonicalize.m4 serial 1 (gettext-0.12)
+# canonicalize.m4 serial 2 (gettext-0.12.2)
 dnl Copyright (C) 2003 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
@@ -23,5 +23,5 @@ AC_DEFUN([gl_CANONICALIZE],
 AC_DEFUN([gl_PREREQ_CANONICALIZE],
 [
   AC_CHECK_HEADERS_ONCE(sys/param.h unistd.h)
-  AC_CHECK_FUNCS(getcwd)
+  AC_CHECK_FUNCS(getcwd readlink)
 ])
